# ai-agent-hackathon

monday-ai-agent/: pyproject.toml
monday-ai-agent/src/monday_ai_agent/: __init__.py
monday-ai-agent/src/oda_to_productivity/: __init__.py  monday_server.py
