[project]
name = "monday-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "odajk", email = "oda.kristensen@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "databricks>=0.2",
    "databricks-sdk>=0.57.0",
    "httpx>=0.28.1",
    "mcp>=1.10.1",
    "openai>=1.93.0",
    "smolagents[gradio,mcp]>=1.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
